@@ -1,3 +1,9 @@
+Mon Aug 30 16:48:34 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/FIFO.h:
+        * ace/FIFO_Recv.h:
+        * ace/FIFO_Send.h: Clarified initialization and open behavior.
+
 Mon Aug 30 15:33:57 UTC 2010  Steve Huston  <shuston@riverace.com>
 
         * ace/Process.h (set_handles): Add a note that passing a socket handle
